--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.2.0",
   "description": "NestJS module for creating Model Context Protocol (MCP) servers and exposing tools using SSE",
   "main": "dist/index.js",
+  "license": "MIT",
   "types": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "prepare": "npm run build",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "lint": "eslint \"{src,apps,libs,tests}/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\""
   },
   "peerDependencies": {
     "@modelcontextprotocol/sdk": ">=1.4.1",
@@ -18,17 +24,26 @@
     "reflect-metadata": ">=0.1.14"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
     "@modelcontextprotocol/sdk": "1.4.1",
     "@nestjs/common": "^11.0.5",
     "@nestjs/core": "^11.0.5",
-    "@nestjs/testing": "^11.0.5",
     "@nestjs/platform-express": "^11.0.5",
+    "@nestjs/testing": "^11.0.5",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.10",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "express": "^4.21.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0"
+  },
+  "dependencies": {
+    "path-to-regexp": "^8.2.0"
   }
 }
