Adding simple playground and improving errors (#15)
Adds playground and improves error responses (#15)

---------

Co-authored-by: raphael.kieling <raphael.kieling-ext@ab-inbev.com>
Co-authored-by: GitHub Actions <actions@github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "esModuleInterop": true,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src/**/*", "tests/**/*"],
+  "include": ["src/**/*", "tests/**/*", "playground/**/*"],
   "exclude": ["node_modules", "dist"]
 }
