--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "prepare": "npm run build",
+    "start:playground": "ts-node-dev --respawn ./playground/server.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint \"{src,apps,libs,tests}/**/*.ts\" --fix",
@@ -40,6 +41,7 @@
     "express": "^4.21.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
