adds support for streamable HTTP (#27)
* adds support for streamable HTTP

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rekog/mcp-nest",
-  "version": "1.3.1",
+  "version": "1.4.0-beta.0",
   "description": "NestJS module for creating Model Context Protocol (MCP) servers and exposing tools using SSE",
   "main": "dist/index.js",
   "license": "MIT",
@@ -12,8 +12,8 @@
     "build": "tsc -p tsconfig.build.json",
     "prepare": "npm run build",
     "start:playground": "ts-node-dev --respawn ./playground/server.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "npx --node-options=--experimental-vm-modules jest",
+    "test:watch": "npx --node-options=--experimental-vm-modules jest --watch",
     "lint": "eslint \"{src,apps,libs,tests}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\""
   },
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
-    "@modelcontextprotocol/sdk": "1.4.1",
+    "@modelcontextprotocol/sdk": "npm:mcp-test-sdk@^1.10.0",
     "@nestjs/common": "^11.0.5",
     "@nestjs/core": "^11.0.5",
     "@nestjs/platform-express": "^11.0.5",
