--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@rekog/mcp-nest",
-  "version": "1.4.0",
-  "description": "NestJS module for creating Model Context Protocol (MCP) servers and exposing tools using SSE",
+  "version": "1.5.0-beta.1",
+  "description": "NestJS module for creating Model Context Protocol (MCP) servers",
   "main": "dist/index.js",
   "license": "MIT",
   "types": "dist/index.d.ts",
   "publishConfig": {
     "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rekog-labs/MCP-Nest"
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
