--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@nestjs/common": ">=9.0.0",
     "@nestjs/core": ">=9.0.0",
     "express": ">=4.0.0",
-    "reflect-metadata": ">=0.1.14"
+    "reflect-metadata": ">=0.1.14",
+    "zod": ">=3.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
