--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,8 +4,18 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "noEmitOnError": false,
-    "declaration": true
+    "declaration": true,
+    "sourceMap": true,
+    "declarationMap": true,
+    "inlineSources": true,
+    "sourceRoot": ""
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.test.ts"
+  ]
 }
