--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
     "sourceMap": true,
+    "inlineSources": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "rootDir": "./",
@@ -21,6 +22,13 @@
     "esModuleInterop": true,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src/**/*", "tests/**/*", "playground/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*",
+    "tests/**/*",
+    "playground/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
