--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@nestjs/core": ">=9.0.0",
     "express": ">=4.0.0",
     "reflect-metadata": ">=0.1.14",
-    "zod": ">=3.0.0",
+    "zod": "^3.0.0",
     "zod-to-json-schema": ">=3.23.0"
   },
   "devDependencies": {
