feat(fastify): add fastify support (#98)
Added fastify support by adding an abstraction layer for the request and response objects. This uses the adapter pattern that automatically detects if the server is running with express or fastify.

Added `@nestjs/platform-fastify` as an optional peer dependency.

### HTTP Adapter Pattern

The transport layer uses an adapter pattern to abstract away framework-specific differences:

- **`HttpAdapterFactory`** - Detects the framework and returns the appropriate adapter
- **`ExpressHttpAdapter`** - Handles Express request/response objects
- **`FastifyHttpAdapter`** - Handles Fastify request/reply objects
- **Generic interfaces** - `HttpRequest` and `HttpResponse` provide a unified API

### Automatic Detection

The factory automatically detects the framework by examining the request and response objects:

**Express Detection:**
- Has `req.get()` method
- No `req.routeOptions` property
- Response has `headersSent` property
- No `res.sent` property

**Fastify Detection:**
- Has `req.routeOptions` property
- Response has `res.sent` property
- Response has `res.header()` method


Currently this also includes the changes from https://github.com/rekog-labs/MCP-Nest/pull/94 as I can't create stacked PR's from my fork. So please check that one first.

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "build": "tsc -p tsconfig.build.json --sourceMap --inlineSources",
     "prepare": "npm run build",
     "start:playground": "ts-node-dev --respawn playground/servers/server-stateful.ts",
+    "start:fastify": "ts-node-dev --respawn playground/servers/server-fastify.ts",
     "test": "npx --node-options=--experimental-vm-modules jest",
     "test:watch": "npx --node-options=--experimental-vm-modules jest --watch",
+    "test:fastify": "ts-node playground/clients/http-fastify-client.ts",
     "lint": "eslint \"{src,apps,libs,tests}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\""
   },
@@ -33,12 +35,18 @@
     "@nestjs/core": ">=9.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-fastify": "^11.1.5",
     "@nestjs/typeorm": ">=9.0.0",
     "express": ">=4.0.0",
     "reflect-metadata": ">=0.1.14",
     "typeorm": ">=0.3.25",
     "zod": "^3.0.0",
     "zod-to-json-schema": ">=3.23.0"
+  },
+  "peerDependenciesMeta": {
+    "@nestjs/platform-fastify": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
