support for custom controllers (#109)
* Adds support for custom controllers
* Adds example using custom controllers with the advanced server 
* Adds support for async configuration
* bump version to 1.8.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rekog/mcp-nest",
-  "version": "1.8.1-alpha.1",
+  "version": "1.8.1",
   "description": "NestJS module for creating Model Context Protocol (MCP) servers",
   "main": "dist/index.js",
   "license": "MIT",
