feat: make TypeORM optional (#116)
* feat: make typeorm optional

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rekog/mcp-nest",
-  "version": "1.8.2",
+  "version": "1.8.3-alpha.2",
   "description": "NestJS module for creating Model Context Protocol (MCP) servers",
   "main": "dist/index.js",
   "license": "MIT",
@@ -46,6 +46,12 @@
   "peerDependenciesMeta": {
     "@nestjs/platform-fastify": {
       "optional": true
+    },
+    "@nestjs/typeorm": {
+      "optional": true
+    },
+    "typeorm": {
+      "optional": true
     }
   },
   "devDependencies": {
@@ -57,6 +63,7 @@
     "@nestjs/platform-express": "^11.1.1",
     "@nestjs/platform-fastify": "^11.1.6",
     "@nestjs/testing": "^11.1.1",
+    "@nestjs/typeorm": "^11.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
@@ -72,6 +79,7 @@
     "supertest": "^7.1.3",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
+    "typeorm": "^0.3.25",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.20.0"
   },
